Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx                                                                                                                                                      
    nginx.ingress.kubernetes.io/proxy-body-size: 50m                                                                                                                                             
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
  name: testrail
spec:
  rules:
  - host: testrail.domain.com
    http:
      paths:
      - backend:
          serviceName: testrail
          servicePort: 80
        path: /
